Site navigation update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <li id="about_nav" class="active"><a href="#about">About</a></li>
           <li id="projects_nav"><a href="#projects">Projects</a></li>
           <li id="notes_nav"><a href="#notes">Notes</a></li>
-          <li><a href="http://stylianipantela.github.io/blog">Blog</a></li>
           <li id="other_nav"><a href="#other">Other</a></li>
         </ul>
         <h3 class="text-muted">Styliani Pantela</h3>
@@ -64,12 +63,13 @@
         <div class="page" id="projects_page" hidden>
           <h1>Projects</h1>
           <div class="row">
-            <div class="col-xs-4" class="thumbnail">
+            <!-- <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/spantela/stelladb" target="_blank" >
                 <img src="img/stelladb2.png"/>
               </a> <br><br>
               <div class="caption">Stella's DB</div>
-            </div>
+
+            </div> -->
             <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/nathanielherman/fmmtl/tree/kdbtree" target="_blank" >
                 <img src="img/kdbtree.png"/>
@@ -82,6 +82,12 @@
                 <img src="img/crimsoncommunity.png"/>
               </a> <br><br>
               <div class="caption">Crimson Community</div>
+            </div>
+            <div class="col-xs-4" class="thumbnail">
+              <a href="http://venngroups.herokuapp.com/" target="_blank" >
+                <img src="img/venngroups.png"/>
+              </a> <br><br>
+              <div class="caption">VennGroups: Scheduling for large groups made easy</div>
             </div>
           </div>
           <br><br><br>
