--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="row">
             <div class="col-xs-8">
-              <p class="lead">I am a recent Computer Science graduate from Harvard University and I am working as a sotware engineer at HP's Vertica, here in Boston. Before joining Vertica I was an undergraduate researcher at the <a href="http://daslab.seas.harvard.edu" target="_blank">DASlab</a> working with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a> on cool column-store projects. Checkout our published <a href="http://dl.acm.org/citation.cfm?id=2764944" target="_blank">work</a> at SIGMOD 2015 for more details.
+              <p class="lead">I am a Computer Science graduate from Harvard University. I am currently working as a Systems Software Engineer at Vertica, in Boston. Before, I was an undergraduate researcher at the Harvard <a href="http://daslab.seas.harvard.edu" target="_blank">DASlab</a> working with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a> on column-store projects. Checkout our published <a href="http://dl.acm.org/citation.cfm?id=2764944" target="_blank">work</a> at SIGMOD 2015 for more details.
               I have interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team, where I got my hands dirty with creating tools for handling big data.</p>
               <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="Resume_website.pdf" target="_blank">Resume</a>.
             </div>
