--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           </div>
           <div class="row">
             <div class="col-xs-8">
-              <p class="lead">I am a Computer Science graduate from Harvard University. I am currently working as a Systems Software Engineer at Vertica, in Boston. Before, I was an undergraduate researcher at the Harvard <a href="http://daslab.seas.harvard.edu" target="_blank">DASlab</a> working with Professor <a href="http://stratos.seas.harvard.edu" target="_blank">Stratos Idreos</a> on column-store projects. Checkout our published <a href="http://dl.acm.org/citation.cfm?id=2764944" target="_blank">work</a> at SIGMOD 2015 for more details.
-              I have interned as a software engineer at <a href="http://www.wayfair.com/" target="_blank">Wayfair</a> and specifically in the Product Catalogue team, where I got my hands dirty with creating tools for handling big data.</p>
+              <p class="lead">I am a Software Engineer at HPE Vertica, living in Cambridge, MA. At HPE I also server as co-chair for DataGals, the HPE group for women in technical career paths. Before that I got my A.B. in computer science from Havard University. I am interested in big data systems, computer science education and promoting women in tech. In my free time I like to read, stay fit and play board games.
               <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="Resume_website.pdf" target="_blank">Resume</a>.
             </div>
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
@@ -188,7 +187,7 @@
 
         <div class="footer" align="center" hidden>
           <hr>
-          <p>&copy; 2014.</p>
+          <p>&copy; 2017.</p>
         </div>
       </div> <!-- /container -->
     </div>
