--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
           </div>
           <div class="row" align="center">
-            <a href="https://github.com/spantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
+            <a href="https://github.com/stylianipantela" target="_blank"><img src="img/GitHub-Mark-120px-plus.png" alt="github" class="img-circle"></a>
             <a href="http://www.linkedin.com/in/stylianipantela/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
           </div>
         </div>
