--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           </div>
           <div class="row">
             <div class="col-xs-8">
-              <p class="lead">I am a Software Engineer at HPE Vertica, living in Cambridge, MA. At HPE I also server as co-chair for DataGals, the HPE group for women in technical career paths. Before that I got my A.B. in computer science from Havard University. I am interested in big data systems, computer science education and promoting women in tech. In my free time I like to read, stay fit and play board games.
+              <p class="lead">I am a Software Engineer at Vertica, living in Cambridge, MA. I also serve as co-chair for DataGals, the former Hewlett Packard Enterprise and now Microfocus wide group for women in technical career paths. In 2015 I received my A.B. in computer science from Havard University. 
+              I am interested in big data systems, computer science education and promoting women in tech. In my free time I like to read, stay fit and play board games.
               <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="Resume_website.pdf" target="_blank">Resume</a>.
             </div>
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
@@ -91,12 +92,6 @@
           </div>
           <br><br><br>
           <div class="row">
-            <div class="col-xs-4" class="thumbnail">
-              <a href="http://venngroups.herokuapp.com/" target="_blank" >
-                <img src="img/venngroups.png"/>
-              </a> <br><br>
-              <div class="caption">VennGroups: Scheduling for large groups made easy</div>
-            </div>
             <div class="col-xs-4" class="thumbnail">
               <a href="http://spantela.github.io/facebook-visualization/" target="_blank" >
                 <img src="img/fcblikesvisualization.png"/>
@@ -187,7 +182,7 @@
 
         <div class="footer" align="center" hidden>
           <hr>
-          <p>&copy; 2017.</p>
+          <p>&copy; 2014-2017.</p>
         </div>
       </div> <!-- /container -->
     </div>
