--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-xs-8">
               <p class="lead">I am a Software Engineer at Vertica, living in Cambridge, MA. I also serve as co-chair for DataGals, the former Hewlett Packard Enterprise and now Microfocus wide group for women in technical career paths. In 2015 I received my A.B. in computer science from Havard University. 
               I am interested in big data systems, computer science education and promoting women in tech. In my free time I like to read, stay fit and play board games.
-              <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="Resume_website.pdf" target="_blank">Resume</a>.
+              <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="resume.pdf" target="_blank">Resume</a>.
             </div>
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
           </div>
@@ -183,4 +183,5 @@
 
 
   </body>
+
 </html>
