--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
           </div>
           <div class="row">
             <div class="col-xs-8">
-              <p class="lead">After graduating from Harvard with an A.B. in Computer Science, I joined HPE's Vertica division as a Systems Software Engineer. Vertica is a distributed analytics database used by Intuit, Etsy, Aol, Uber and serveral other big data companies. I have been working on complex low level problems related to column store databases aiming at improving the performance and usability of Vertica. In addition to that I serve as co-chair for DataGals, the former Hewlett Packard Enterprise and now Microfocus wide group for women in technical career paths.
-              I am interested in doing research on big data systems, computer science education and promoting women in tech. In my free time I like to read, stay fit and play board games.
+              <p class="lead">I am a software engineer at Vertica, a modern column store distributed analytics database used by Intuit, Etsy, Aol, Uber and serveral other big data companies. I am working on complex low level problems related to column store databases aiming at improving performance and usability. I also serve as co-chair for DataGals, the former Hewlett Packard Enterprise and now Microfocus wide group for women in technical career paths. In my free time I like to read, run, climb and play board games. I am also Harvard '15 and RSI '10. 
               <p> Checkout my github if you are interested in past projects I have worked on and connect with me on LinkedIn. For more details also take a look at my  <a href="resume.pdf" target="_blank">Resume</a>.
             </div>
             <div class="col-xs-4"><img src="img/stella.jpg" alt="github" class="img-rounded pull-right"></div>
