Image caption update

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <a href="https://my.vertica.com/blog/datagals-year-review/" target="_blank" >
                 <img src="img/datagals.jpg"/>
               </a> <br><br>
-              <div class="caption"> I also serve as co-chair for DataGals, the Microfocus wide group for women
+              <div class="caption"> I serve as co-chair for DataGals, the Microfocus wide group for women
                 in technical career paths. You can read about our activities <a href="https://my.vertica.com/blog/datagals-year-review/">
                   here</a>.
               </div>
