--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <a href="http://venngroups.herokuapp.com/" target="_blank" >
                 <img src="img/venngroups.png"/>
               </a> <br><br>
-              <div class="caption">VennGroups: Scheduling for large groups made easy</div>
+              <div class="caption">VennGroups: Scheduling for large groups made easy. Winnder of the Most Ingenious Project Award at the 2014 Wayfair Company Hackathon.</div>
             </div>
             <!-- <div class="col-xs-4" class="thumbnail">
               <a href="http://spantela.github.io/facebook-visualization/" target="_blank" >
