--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <a href="http://giftguru.herokuapp.com/" target="_blank" >
                 <img src="img/giftguru.png"/>
               </a> <br><br>
-              <div class="caption">GiftGuru</div>
+              <div class="caption">GiftGuru. A gift recommendation engine. Winner of the 2014 Hackbeanpot Hackathon and Seminifalist at the Harvard i3 2014 competition.</div>
             </div>
             <div class="col-xs-4" class="thumbnail">
               <a href="https://github.com/spantela/set" target="_blank" >
