--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <div class="caption">iPhone App for Set</div>
             </div>
           </div>
-          <h1>Other Projects</h1>
+          <h1>Community Involvement</h1>
           <div class="row">
             <div class="col-xs-4" class="thumbnail">
               <a href="https://my.vertica.com/blog/datagals-year-review/" target="_blank" >
