Update of copyr

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@ http://www.templatemo.com/tm-498-stimulus
                               </ul>
                           </div>
                     </div>
-              </div>
-               </div>
+            </div>
+          </div>
+        </div>
      </div>
 </section>
 
@@ -372,19 +373,19 @@ http://www.templatemo.com/tm-498-stimulus
 
 <!-- Footer Section -->
 
-<footer>
+<!-- <footer>
 	<div class="container">
 		<div class="row">
 
-               <div class="col-md-12 col-sm-12">
-                    <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
-                         <p>Copyright &copy; 2018</p>
-                    </div>
+     <div class="col-md-12 col-sm-12">
+          <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
+               <p>Copyright &copy; 2018</p>
+          </div>
                </div>
 
 		</div>
 	</div>
-</footer>
+</footer> -->
 
 <!-- SCRIPTS -->
 
