--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ http://www.templatemo.com/tm-498-stimulus
 <link rel="stylesheet" href="css/templatemo-style.css">
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
