Google Analytics is back

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ http://www.templatemo.com/tm-498-stimulus
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -395,6 +396,16 @@ http://www.templatemo.com/tm-498-stimulus
 <script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
+
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52490507-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-52490507-1');
+</script>
 
 </body>
 </html>
