--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ http://www.templatemo.com/tm-498-stimulus
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="#" class="navbar-brand">Styliani</a>
+               <a href="#" class="navbar-brand">Styliani |</a>
+               <a href="/blog" class="navbar-brand">Blog</a>
           </div>
 
           <div class="collapse navbar-collapse">
@@ -80,8 +81,8 @@ http://www.templatemo.com/tm-498-stimulus
                               <h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
                               <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Styliani</strong> currently based in Boston.</h1>
 
-                              <p class="wow fadeInUp" data-wow-delay="0.9s"> I am a systems software engineer at Vertica, where I build powerful infrastructure used
-                                 by Big Data Analytics companies. I also chair <a href="https://my.vertica.com/blog/datagals-year-review/" target="_blank">DataGals</a>, the company wide group for women in technical career paths.
+                              <p class="wow fadeInUp" data-wow-delay="0.9s"> I am a distributed systems software engineer at Vertica, where I build powerful infrastructure used
+                                 by the biggest Big Data Analytics companies. I also chair <a href="https://my.vertica.com/blog/datagals-year-review/" target="_blank">DataGals</a>, the company wide group for women in technical career paths.
                                Previously I graduated from Harvard University with a B.A. in Computer Science.</p>
                                <!-- <p class="wow fadeInUp" data-wow-delay="0.9s"> I am also launching a <strong>podcast</strong>
                                  called <a href="https://my.vertica.com/blog/datagals-year-review/">Dev Dossiers</a>. Have you ever wondered how your coworkers debug code,
